# course

python/: admin.xml  admin_y.yaml
python/basic_prgm/: add_two_numbers.py  compound_interest.py  factorial_of_number.py  maximum_of_two_numbers.py  simple_interest.py
python/programs/: basic_data.csv  main_module.py  module2.py  pyproject.toml  read_csv_files.py
python/programs/coverage_prgm/: .coverage  factorial.py  test_factorial.py
